--- a/asmcomp/amd64/BUILD.bazel
+++ b/asmcomp/amd64/BUILD.bazel
@@ -70,12 +70,14 @@ genrule(
 	    "echo '# 1 \"{ARCH}/emit.mlp\"' > $@;".format(ARCH = "FIXME"),
         "$(execpath //runtime:ocamlrun) $(location //tools:cvt_emit.exe) < $(location :emit.mlp) >> $@"
     ]),
+    visibility = ["//asmcomp:__pkg__"]
 )
 
 bootstrap_module(
     name   = "Emit",
     struct = "emit.ml",
-    opts = MODULE_OPTS,
+    sig    = "//asmcomp:Emit_cmi",
+    opts   = MODULE_OPTS,
     deps   = STDLIB + [
         "//asmcomp:Branch_relaxation",
         "//asmcomp:Cmm",
@@ -91,7 +93,6 @@ bootstrap_module(
     data = ["//runtime:primitives"],
     visibility = ["//asmcomp:__pkg__"]
 )
-
 
 bootstrap_module(
     name   = "Proc",
